[package]
name = "ptrace"
version = "0.1.0"
authors = ["Torrie Fischer <torrie@ripple.com>", "David Hou <david.hou314@gmail.com>"]
description = "Rust bindings for the POSIX ptrace API"
repository = "http://github.com/chaosagent/rust-ptrace"
license = "MIT"
readme = "README.md"

[lib]
name = "ptrace"

[dependencies]
bitflags = "0.1"
libc = "0.2.17"
nix = "0.7.0"
posix_ipc = { git = "https://github.com/chaosagent/rust-posix-ipc", rev = "5aacf16" }
